add repllama, fix dotproduct OOM with topk, save in encode function, use hf model names

--- a/config/rag.yaml
+++ b/config/rag.yaml
@@ -1,9 +1,10 @@
 # main_config.yaml
 
 defaults:
+    - _self_
     - retriever_config: retromae
     - reranker_config: null
-    - generator_config: null
+    - generator_config: llama-2-7b-chat
     - dataset_config: nq_open
 
 run_name: ???
