fix metrics, add load and save trec files for ranking, reranking

--- a/config/rag.yaml
+++ b/config/rag.yaml
@@ -10,6 +10,7 @@ defaults:
 run_name: ???
 dataset_folder: 'datasets/'
 index_folder: 'indexes/'
+run_folder: 'runs/'
 experiment_folder: 'experiments/'
 processing_num_proc: 40
 overwrite_datasets: false
