--- a/config/rag.yaml
+++ b/config/rag.yaml
@@ -2,7 +2,7 @@
 
 defaults:
     - _self_
-    - retriever_config: retromae
+    - retriever_config: null
     - reranker_config: null
     - generator_config: llama-2-7b-chat
     - dataset_config: nq_open
