--- a/config/retrieve.yaml
+++ b/config/retrieve.yaml
@@ -10,8 +10,8 @@ defaults:
 run_name: ???
 dataset_folder: 'datasets/'
 index_folder: 'indexes/'
-experiment_folder: 'experiments/'
-run_folder: 'runs/'
+experiments_folder: 'experiments/'
+runs_folder: 'runs/'
 processing_num_proc: 40
 overwrite_datasets: false
 debug: false
